<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFBF6">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/define_dimen_12"
        android:src="@drawable/ic_back"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="272dp"
        android:layout_height="167dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:paddingTop="@dimen/define_dimen_80"
        android:src="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FF5722"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#FF5722"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#FF5722"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:background="@android:drawable/ic_notification_overlay"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/define_dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="#FF5722"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/define_dimen_6"
            android:text="@string/sign_in"
            android:textColor="#2196F3"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</RelativeLayout>